[package]
name = "joes-villagen"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = false
lto = true
panic = 'unwind'
incremental = true

[dependencies]
reqwest = "0.11"
"joes-gdmc-http-rs" = {path = "../joes-gdmc-http-rs"}
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
